--- a/about-me.html
+++ b/about-me.html
@@ -58,7 +58,7 @@
         </p>
       </div>
   
-      <img id = "violinPic" src = "assets/Samiksha-Violin-Award.jpg" alt = "A photo of me and my friend at a violin award ceremony. In this image, I am wearing a traditional outfit that consists of a deep purple blouse with orange accents on the neckline and sleeves and a deep purple skirt. My friend is wearing an orange dress with deep red accents. My friend and I are sporting half-up, half-down hairstyles.">
+      <img id = "violinPic" src = "assets/New Note.png">
     </main>
   </body>
 </html>
