--- a/about-me.html
+++ b/about-me.html
@@ -47,7 +47,7 @@
     <main>
       <div class = "rightBox">
         <p>
-          I am a rising high school sophomore interested in using technology and computer science to positively impact the world!<br><br>When I am not coding or sitting in front of a computer, I can be found:<br><br>
+          I am a high school sophomore interested in using technology and computer science to positively impact the world!<br><br>When I am not coding or sitting in front of a computer, I can be found:<br><br>
           <ul>
             <li>Playing Carnatic violin (I have been playing since I was seven years old)</li>
             <li>Listening to music (<a href = "steal-my-playlist.html">learn more about my favorite songs</a>)</li>
