--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
           <button>
             <a href = "mailto:slingan01@gmail.com" alt = "A button that takes allows you to send me an email">Email</a>
           </button>
+		
+	<button>
+            <a href = "https://github.com/slingann" alt = "A button that takes you to my Github profile">Github</a>
+          </button>
+      
         </div>
       </div>
     </main>
