--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
   <head>
     
     <title>Samiksha Lingan</title>
+	  <link rel="icon" href="New Note.png">
     <meta charset="utf-8" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	  <meta name="viewport" content="width=device-width, initial-scale=1" />
