--- a/about-me.html
+++ b/about-me.html
@@ -48,11 +48,11 @@
     <main>
       <div class = "rightBox">
         <p>
-          I am a high school sophomore interested in using technology and computer science to positively impact the world!<br><br>When I am not coding or sitting in front of a computer, I can be found:<br><br>
+          I am a high school junior interested in using technology and computer science to positively impact the world!<br><br>When I am not coding or sitting in front of a computer, I can be found:<br><br>
           <ul>
             <li>Playing Carnatic violin (I have been playing since I was seven years old)</li>
             <li>Listening to music (<a href = "steal-my-playlist.html">learn more about my favorite songs</a>)</li>
-            <li>Gardening or taking care of my plants</li>
+            <li>Hanging out with my pet chickens</li>
           </ul>
           <br>
           I also love being involved in my community by planning events and communicating with members of my community. You can <a href = "portfolio.html">view my portfolio</a> to see projects I have worked on related to social and environmental justice and my community.
